--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,17 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+
+<!--https://github.com/eclipse-paho/paho.mqtt.java?tab=readme-ov-file-->
+
+    <dependencies>
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+    </dependencies>
+
+
+
 </project>
