--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-<!--https://github.com/eclipse-paho/paho.mqtt.java?tab=readme-ov-file-->
-
     <dependencies>
         <dependency>
             <groupId>org.eclipse.paho</groupId>
@@ -32,14 +30,15 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.9.1</version>
+            <version>5.10.2</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.14.2</version>
+            <version>4.11.0</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
